# CG-Raytrace

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: .#path.cpp  CMakeLists.txt  example.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  path.cpp  path_tracer.cpp  path_tracer.hpp  renderArea.cpp  renderArea.hpp  renderboy.cpp  renderboy.hpp  rtscene.cpp  rtscene.hpp  setup.hpp  simple.cpp  simple.hpp  window.cpp  window.hpp
src/core/: boundingsphere.cpp  boundingsphere.hpp  camera.cpp  camera.hpp  defs.hpp  image.cpp  image.hpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  ray.cpp  ray.hpp  raytracer.cpp  raytracer.hpp  raytracer_simple.cpp  raytracer_simple.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  tracer_sphere.cpp  tracer_sphere.hpp  view.hpp
src/path/: aabb.hpp  aabbox.hpp  camera.cpp  camera.hpp  intersection.hpp  kdtree.cpp  kdtree.hpp  material.cpp  material.hpp  mesh.hpp  model.cpp  model.hpp  objects.cpp  objects.hpp  ray.hpp  renderer.cpp  renderer.hpp  rendertarget.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  triangle.hpp  vertex.hpp
test/: CMakeLists.txt  test_bounding_sphere.cpp  test_example.cpp  test_intersect.cpp
