cmake_minimum_required(VERSION 3.6)

project(Raytrace CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)

find_package(glm REQUIRED)
find_package(Qt5 COMPONENTS Widgets Core Gui REQUIRED)

add_subdirectory(src)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/teapot1.obj DESTINATION ${CMAKE_BINARY_DIR}/src/Release)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/teapot1.obj DESTINATION ${CMAKE_BINARY_DIR}/src/Debug)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/metal1.jpg DESTINATION ${CMAKE_BINARY_DIR}/src/Release)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/metal1.jpg DESTINATION ${CMAKE_BINARY_DIR}/src/Debug)

